--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,47 @@
 version: "3.9"
 services:
-  api:
+  app:
     build:
       context: .
       dockerfile: Dockerfile
+    tty: true
+    stdin_open: true
     ports:
       - "8080:8080"
     environment:
-      - DB_SOURCE=postgresql://root:secret@postgres:5432/simple_bank?sslmode=disable
-    depends_on:
-      - postgres
-    entrypoint: ["/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh"]
-    command: ["/app/main"]
-  postgres:
-    image: postgres:12-alpine
-    environment:
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=secret
-      - POSTGRES_DB=simple_bank
-  redis:
-    image: redis:alpine
-    container_name: fiber-redis
-    # hostname: redis
-    ports:
-      - "6379:6379"
-    expose:
-      - "6379"
+      - DB_SOURCE=postgresql://root:secret@postgres:5432/go_app?sslmode=disable
+    volumes:
+      - ./:/app
+    # depends_on:
+    # - postgres
+    # entrypoint: ["/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh"]
+    command: air -c .air.linux.toml
+  # postgres:
+  #   image: postgres:12-alpine
+  #   environment:
+  #     - POSTGRES_USER=root
+  #     - POSTGRES_PASSWORD=secret
+  #     - POSTGRES_DB=go_app
+  # redis:
+  #   image: redis:alpine
+  #   container_name: fiber-redis
+  #   # hostname: redis
+  #   ports:
+  #     - "6379:6379"
+  #   expose:
+  #     - "6379"
   web:
+    build:
+      context: ./web
+      dockerfile: Dockerfile
+    container_name: web
+    tty: true
+    stdin_open: true
+    command: npm run dev
+    volumes:
+      - ./web:/web
+      - /web/node_modules
+    ports:
+      - 3000:3000
+    environment:
+      - VITE_APP_SERVER_HOST=$VITE_APP_SERVER_HOST
