--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite  --host 0.0.0.0",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview"
   },
@@ -21,6 +21,7 @@
     "tailwindcss": "^2.2.4",
     "typescript": "^4.3.2",
     "vite": "^2.4.2",
+    "vite-plugin-components": "^0.13.2",
     "vite-plugin-pages": "^0.15.0",
     "vue-tsc": "^0.0.24"
   }
