--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,55 @@
-version: "3.9"
+version: "3"
 services:
   api:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
-    environment:
-      - DB_SOURCE=postgresql://root:secret@postgres:5432/simple_bank?sslmode=disable
-    depends_on:
-      - postgres
-    entrypoint: ["/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh"]
-    command: ["/app/main"]
+      - "${APP_PORT:-8000}:8000"
+    # environment:
+    # - DB_SOURCE=postgresql://root:secret@postgres:5432/go_app?sslmode=disable
+    volumes:
+      - ./:/app
+    # depends_on:
+    # - postgres
+    # entrypoint: ["/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh"]
+    command: air -c .air.linux.toml
+    networks:
+      - my-net
+
   postgres:
     image: postgres:12-alpine
-    environment:
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=secret
-      - POSTGRES_DB=simple_bank
-  redis:
-    image: redis:alpine
-    container_name: fiber-redis
-    # hostname: redis
     ports:
-      - "6379:6379"
-    expose:
-      - "6379"
-  web:
+      - "${FORWARD_DB_PORT:-5432}:5432"
+    environment:
+      POSTGRES_DB: "${DB_DATABASE:-api-db}"
+      POSTGRES_USER: "${DB_USERNAME:-user}"
+      POSTGRES_PASSWORD: "${DB_PASSWORD:-secret}"
+    volumes:
+      - "./db2:/var/lib/postgresql/data"
+    networks:
+      - my-net
+  # redis:
+  #   image: redis:alpine
+  #   container_name: fiber-redis
+  #   # hostname: redis
+  #   ports:
+  #     - "6379:6379"
+  #   expose:
+  #     - "6379"
+  # web:
+  #   build:
+  #     context: ./web
+  #     dockerfile: Dockerfile
+  #   container_name: web
+  #   command: npm run dev
+  #   volumes:
+  #     - ./web:/web
+  #     - /web/node_modules
+  #   ports:
+  #     - 3000:3000
+  #   environment:
+  #     - VITE_APP_SERVER_HOST=$VITE_APP_SERVER_HOST
+networks:
+  my-net:
+    driver: bridge
